--- a/README
+++ b/README
@@ -1,7 +1,14 @@
 node version: v4.2.6
 
+Set the following Environment Variables in Travis CI
+
+* SAUCE_USERNAME 
+* SAUCE_ACCESS_KEY 
+
 
 npm install -g wdio
 npm install -g selenium-standalone@latest
 npm install -g jasmine
+
+npm install
 
